--- a/reserveTime/core/templates/home-page.html
+++ b/reserveTime/core/templates/home-page.html
@@ -103,7 +103,7 @@
         <div class="custom-container container main-container shadow">
             <div class="inner-container">
                 <div class="row" style="margin-bottom: 50px;">
-                    <h3 class="full bold">Recently viewed</h3>
+                    <h3 class="full bold bottom-border pb-3">Recently viewed</h3>
                     <div class="card-list d-flex">
                         {% for company in companies %}
                             <div class="card">
