--- a/reserveTime/account/templates/user-profile.html
+++ b/reserveTime/account/templates/user-profile.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>My Profile</title>
     
@@ -65,7 +66,7 @@
                     <img src="{% static 'images/profile.png' %}" alt="">
                 {% endif %}
                 <div>
-                    <h2> {{user.first_name}} {{user.last_name}} </h2>
+                    <h2> {{user.first_name|capfirst}} {{user.last_name|capfirst}} </h2>
                     <span>0 points</span>
                 </div>
             </div>
@@ -79,8 +80,7 @@
                     <div class="col-lg-2">
                         <nav>
                             <ul class="profile-menu-list">
-                                <li><a href="#">Reservations</a></li>
-                                <li><a href="#">Saved Restaurants</a></li>
+                                <li><a href="{% url 'core:user-saved-restaurants' user.pk %}">Saved Restaurants</a></li>
                                 <li><a href="{% url 'account:user-update' user.pk %}">Account Details</a></li>
                                 <li><a href="#">Delete Account</a></li>
                             </ul>
@@ -92,7 +92,42 @@
                                 <h3>Upcoming Reservations</h3>
                             </div>
                             <div class="content">
-                                <p>No Upcoming Reservations <a href="#">Book a Table</a>.</p>
+                                {% if user_reservations %}
+                                    {% for reservation in user_reservations %}
+                                        <div class="company-item row pt-3 pb-3 mb-4 bottom-border">
+                                            <div class="col-3 company-profile-img">
+                                                <img src="{% static 'images/img3.jpg' %}" alt="">
+                                            </div>
+                                            <div class="col-9">
+                                                <div class="d-flex ">
+                                                    <span class="bold mr-2">Restaurant Name : </span>
+                                                    <p>{{reservation.company.company_name}}</p>
+                                                </div>
+                                                <div class="d-flex ">
+                                                    <span class="bold mr-2">Reserve Date and Time : </span>
+                                                    <p>{{reservation.reserved_date}}, {{reservation.reserved_time|time:'H:i:s'}}</p>
+                                                </div>
+                                                <div class="d-flex">
+                                                    <span class="bold mr-2">Total Price : </span>
+                                                    <p> {{reservation.total_price}} $</p>
+                                                </div> 
+                                                <div class="d-flex align-items-center">
+                                                    <span class="bold mr-2">Location : </span>
+                                                    <p class="location">{{reservation.company.country_location}}, {{reservation.company.city_location}}</p>
+                                                </div>
+                                                <div class="d-flex align-items-center">
+                                                    <span>TakeOut : </span>
+                                                    <div class="ml-3 phone-number d-flex mt-2">
+                                                        <i class="fas fa-phone-alt pr-2"></i> 
+                                                        <p>xxx xxx xx xx</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {% endfor %}   
+                                {% else %}
+                                   <p>No Upcoming Reservations <a href="#">Book a Table</a>.</p>
+                                {% endif %}
                             </div>
                         </div>
                         <div class="reservations">
