--- a/reserveTime/static/css/company-profile.css
+++ b/reserveTime/static/css/company-profile.css
@@ -55,10 +55,16 @@
     border-bottom: 1px solid #ccc;
 }
 
+.photo-gallery a{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .photo-gallery img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-
 .menu-item-header{
     display: flex;
     justify-content: space-between;
@@ -208,22 +214,13 @@
 
 .company-info-block .col-6{
     max-width: 80%;
-    /* justify-content: center; */
+    margin-bottom: 10px;
 }
 
 .company-info-block span{
     font-weight: bold;
 }
 
-.icon-block i, svg{
-    margin: 10px;
-    font-size: 18px;
-}
-
-.icon-box i, svg{
-    margin: 10px;
-    font-size: 18px;
-}
 
 .show-menu-btn{
     padding: 15px 50px;
