--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -49,12 +49,16 @@ body{
     border-bottom: 1px solid #ccc;
 }
 
+.right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .side{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px 0px;   
 }
 .side img{
     border-radius: 50%;
@@ -62,6 +66,17 @@ body{
 .right i{
     color: #000;
     font-size: 22px;
+}
+
+.user-profile-link{
+    color: #000;
+    border-right: 1px solid #ccc;
+    padding-right: 10px;
+}
+
+.user-profile-link:hover{
+    text-decoration: none;
+    color: #000;
 }
 
 .user-profile,
@@ -159,7 +174,6 @@ h3{
 }
 
 .card-list{
-    border-top: 1px solid #ccc;
     padding: 10px;
 }
 .card-list-bellow{
@@ -606,3 +620,36 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
     padding-top: 10px;
     margin-bottom: 20px;
  }
+
+.company-profile-img img {
+    width: 100%;
+    height: 100%;
+}
+.company-item-link{
+    color: #000000;
+    text-decoration: none;
+}
+
+.company-item-link:hover{
+    color: #000000;
+    text-decoration: none;
+}
+.company-item{
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    margin-top: 10px;
+}
+.company-list-container{
+    border-radius: 15px;
+    background-color: #fff;
+}
+
+.company-info-block .icon-block{
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.company-info-block p{
+    margin-bottom: 0;
+}
