added comment and fixed some bugs

--- a/reserveTime/core/templates/company-infos.html
+++ b/reserveTime/core/templates/company-infos.html
@@ -108,7 +108,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label for="formGroupExampleInput">Restaurant State/Province</label>
+                                <label for="formGroupExampleInput">Restaurant Street/Province</label>
                                 {{form.province_location}}
                                 {{form.province_location.errors}}
                             </div>
