--- a/reserveTime/core/templates/home-page.html
+++ b/reserveTime/core/templates/home-page.html
@@ -379,6 +379,7 @@
     <script>
         $(document).ready(function(){
             $('.header-btn').click(function(){
+                $('.custom-drop-down').hide()
                 $(this).siblings('.custom-drop-down').slideToggle()
             });
 
