--- a/reserveTime/core/templates/write-comment.html
+++ b/reserveTime/core/templates/write-comment.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>  
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/user-profile.css">
-    <link rel="stylesheet" href="css/company-profile.css">
-    <link rel="stylesheet" href="css/raiting.css    ">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reserve-page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+    <link rel="stylesheet" href="{% static 'raiting.css' %}">
     <title>Company Profile</title>
 </head>
 <body id="raiting-body">
@@ -23,7 +25,7 @@
             <div class="row justify-content-between">
                 <div class="left side">
                     <a href="#">
-                        <img src="images/logo.png" width="250px" alt="">
+                        <img src="{% static 'logo.png' %}" width="250px" alt="">
                     </a>
                 </div>
                 <div class="right side">
@@ -65,8 +67,8 @@
 
     <main class="pt-5 mb-5">
         <div class="container main-raiting-container pb-3" style="padding: 0;">
-            <h3 class="text-center full pt-3 pb-3 bold bottom-border">Give your feedback to "Cilantro - Hilton Baku Hotel"</h3>  
-            <div class="container raiting-container">
+            <h3 class="text-center full pt-3 pb-3 bold bottom-border">Give your feedback to "{{company.company_name}}"</h3>  
+            {% comment %} <div class="container raiting-container">
                 <div class="feedback">
                   <div class="rating">
                     <input type="radio" name="rating" id="rating-5">
@@ -170,11 +172,12 @@
                     </div>
                   </div>
                 </div>
-            </div>
+            </div> {% endcomment %}
             <div class="row mt-3">
-                <form action="" class="full m-auto" style="width: 80%;">
+                <form  class="full m-auto" style="width: 80%;" method="POST">
+                  {% csrf_token %}
                     <div class="form-group">
-                    <textarea name="feedback" id="" cols="30" rows="5" class="form-control" placeholder="Please, write your review about foods and service in the restaurant"></textarea>
+                    {{form.text}}
                     </div>
                     <input type="submit" class="float-r btn btn-success" value="Send Review">
                 </form>
@@ -182,15 +185,15 @@
         </div>
     </main>
     
-
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/reserve-page.js' %}"></script>
     <script>
         $(document).ready(function(){
             $('.header-btn').click(function(){
-                $('.custom-drop-down').hide()
+                $('.custom-drop-down').slideUp()
                 $(this).siblings('.custom-drop-down').slideToggle()
             });
 
