--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -105,7 +105,7 @@ body{
     display: flex;
     flex-direction: column;
     border-radius: 5px;
-    z-index: 1;
+    z-index: 100 !important;
 }
 
 .shadow{
