--- a/reserveTime/core/templates/company-tables.html
+++ b/reserveTime/core/templates/company-tables.html
@@ -28,6 +28,10 @@
             max-width: 565px;
         }
 
+        .icon-box i {
+            margin: 10px;
+        }
+
     </style>
 
 </head>
